Fix footer text alignment and positioning
- Increase top margin from 60px to 85px to clear title images
- Increase left margin from 19px to 25px for better spacing
- Increase text width from 205px to 270px to accommodate full descriptions

This fixes the text overlapping with the DESIGN IT/PRINT IT/MAIL IT title images.

--- a/web/application/views/css/style.css
+++ b/web/application/views/css/style.css
@@ -1889,10 +1889,10 @@ MAIN PAGE
     color: #000000;
     font-family: Arial,Helvetica,"sans-serif";
     font-size: 12px;
-    margin: 60px 0 0 19px;
+    margin: 85px 0 0 25px;
     position: relative;
     font-weight: normal;
-    width: 205px;
+    width: 270px;
 }
 .footerSeparator {
     background: none repeat scroll 0 0 #AFAFAF;
